fix: use su -c direct execution + cd to script dir like manual terminal